doc: fix styling for line blocks in tables
We can use line blocks to force linebreaks within a table cell.
However, by default line blocks force blank space at the bottom that
we don't want in a table cell.
Remove the extra space for line blocks in table cells.

--- a/doc/static/css/common.css
+++ b/doc/static/css/common.css
@@ -243,3 +243,9 @@ div.numbered-step>h6::before {
    overflow-x: auto;
    clear: left;
 }
+
+
+/* fix styling for line blocks in tables */
+.rst-content td .line-block {
+   margin-bottom: 0px;
+}
